# dex-connector

./: .gitignore  Cargo.toml  README.md  README_LIGHTER.md  build.rs
.github/workflows/: deploy-sidecar.yml
crates/lighter-ratelimit/: Cargo.toml
crates/lighter-ratelimit/src/: bucket.rs  client.rs  lib.rs  protocol.rs
crates/lighter-ratelimit/tests/: e2e.rs
deploy/: lighter-ratelimit.service
examples/: lighter_example.rs
scripts/: bump.sh
src/: dex_connector.rs  dex_request.rs  dex_websocket.rs  extended_connector.rs  hyperliquid_connector.rs  lib.rs  lighter_connector.rs  lighter_waf_cooldown.rs  rabbitx_connector.rs
src/extended_connector/: maintenance.rs  mod.rs  parsing.rs  rest.rs  signing.rs  ws.rs
src/lighter_connector/: ffi.rs  maintenance.rs  market_cache.rs  mod.rs  parsing.rs  rest.rs  signing.rs  ws.rs
src/lighter_ratelimit/: mod.rs  weights.rs
tests/: lighter_ratelimit_e2e.rs
