[package]
name = "dex-connector"
version = "2.0.2"
authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
edition = "2021"
description = "connections to dexes"
documentation = "https://docs.rs/dex-connector/"
homepage = "https://crates.io/crates/dex-connector"
repository = "https://github.com/shigeo-nakamura/dex-connector"
license = "MIT"

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
rmp-serde = "1.0.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json", "cookies"] }
async-trait = "0.1.68"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tokio = { version = "1.29.1", features = ["full"] }
ctrlc = "3.1.9"
futures = "0.3"
hmac = "0.12"
hex = "0.4.3"
sha2 = "0.10"
sha3 = "0.10.1"
crypto-mac = "0.11"
rust_decimal = { version = "1.0", features = ["serde"] }
lazy_static = "1.3"
ethers = { version = "2.0.14", features = ["eip712", "abigen"] } # Updated to match hyperliquid_rust_sdk
debot-utils = "1.0.*"
ecdsa = "0.16.9"
hex-literal = "0.4.1"
k256 = "0.13.3"
primitive-types = "0.12"
hyperliquid_rust_sdk = "0.5.0"

[dependencies.generic-array]
version = "0.14.6"
features = ["zeroize"]
default-features = false
