[package]
name = "dex-connector"
version = "4.4.0"
authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
edition = "2021"
description = "connections to dexes"
documentation = "https://docs.rs/dex-connector/"
homepage = "https://crates.io/crates/dex-connector"
repository = "https://github.com/shigeo-nakamura/dex-connector"
license = "MIT"

[workspace]
members = [".", "crates/lighter-ratelimit"]

[features]
default = ["lighter-sdk"]
lighter-sdk = ["dep:libc", "dep:lighter-ratelimit"]
extended-sdk = ["dep:rust-crypto-lib-base", "dep:starknet"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
rmp-serde = "1.0.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json", "cookies", "rustls-tls", "multipart"] }
async-trait = "0.1.68"
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.29.1", features = ["full"] }
http = "0.2" # Added for http::request::Request
ctrlc = "3.1.9"
futures = "0.3"
hmac = "0.12"
hex = "0.4.3"
sha2 = "0.10"
sha3 = "0.10.1"
crypto-mac = "0.11"
rust_decimal = { version = "1.0", features = ["serde"] }
lazy_static = "1.3"
regex = "1"
ethers = { version = "2.0.14", features = ["eip712", "abigen"] }
debot-utils = "1.0.*"
ecdsa = "0.16.9"
hex-literal = "0.4.1"
k256 = "0.13.3"
primitive-types = "0.12"
secp256k1 = { version = "0.28", features = ["recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
libc = { version = "0.2", optional = true }
rand = "0.8"
parking_lot = "0.12"
env_logger = "0.10"

# Split-out sub-crate (bot-strategy#118). Used only from `lighter_connector`
# so it can be optional and carried by the lighter-sdk feature — this drops
# it entirely from extended-sdk-only builds (bot-strategy#123). The sidecar
# binary keeps building standalone from the workspace member.
lighter-ratelimit = { path = "crates/lighter-ratelimit", optional = true }

# Cryptographic dependencies for Schnorr+Poseidon2
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
num-bigint = "0.4"
num-traits = "0.2"
# Poseidon hash function implementation
poseidon-rs = "0.0.10"
# Simple field arithmetic for Goldilocks
# Using num-bigint for field operations

# Extended Exchange (StarkNet SNIP-12) — behind `extended-sdk` feature
rust-crypto-lib-base = { git = "https://github.com/x10xchange/rust-crypto-lib-base", optional = true }
starknet = { version = "0.17", optional = true }

[[bin]]
name = "extended-spike"
path = "src/bin/extended-spike.rs"
required-features = ["extended-sdk"]

[[bin]]
name = "extended-rtt"
path = "src/bin/extended-rtt.rs"
required-features = ["extended-sdk"]

[[bin]]
name = "extended-trigger-spike"
path = "src/bin/extended-trigger-spike.rs"
required-features = ["extended-sdk"]

[dev-dependencies]
rusoto_core = "0.48"
rusoto_kms = "0.48"
tokio-test = "0.4"
bytes = "1.0"
openssl = "0.10"
env_logger = "0.10"

[dependencies.generic-array]
version = "0.14.6"
features = ["zeroize"]
default-features = false
